--- a/newIDE/app/public/external/yarn/yarn-style.css
+++ b/newIDE/app/public/external/yarn/yarn-style.css
@@ -3,7 +3,7 @@
  */
 html,
 body {
-  font-family: Helvetica;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   margin: 0;
   overflow-y: hidden;
   background-color: white;
@@ -43,7 +43,7 @@ body {
 }
 
 #path-editor-header > span > input {
-  font-family: 'Courier New';
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   height: 27px;
   width: 90px;
   float: left;
