--- a/newIDE/app/src/UI/Theme/Global/EventsSheet.css
+++ b/newIDE/app/src/UI/Theme/Global/EventsSheet.css
@@ -6,7 +6,7 @@
 .gd-events-sheet .events-tree {
     /* Use the fonts provided by the operating system(s) as possible. */
     /* If you update this font list, be sure to do it in all the other places using fonts in the codebase. */
-    font-family: var(--gdevelop-font-family) !important;
+    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
     font-size: 14px !important;
     background: var(--event-sheet-event-tree-background-color);
 }
