--- a/newIDE/app/src/UI/Theme/Global/Table.css
+++ b/newIDE/app/src/UI/Theme/Global/Table.css
@@ -4,7 +4,7 @@
 .gd-table {
   /* Use the fonts provided by the operating system(s) as possible. */
   /* If you update this font list, be sure to do it in all the other places using fonts in the codebase. */
-  font-family: var(--gdevelop-font-family);
+  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
   color: var(--table-text-color);
 }
 
