--- a/newIDE/app/public/external/jfxr/jfxr-style.css
+++ b/newIDE/app/public/external/jfxr/jfxr-style.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  font-family: Helvetica;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   margin: 0;
   overflow-y: hidden;
   background-color: black;
@@ -56,7 +56,7 @@ body {
 }
 
 #path-editor-header > span > input {
-  font-family: 'Courier New';
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
   height: 27px;
   width: 90px;
   float: left;
