--- a/newIDE/app/src/MainFrame/MainFrame.css
+++ b/newIDE/app/src/MainFrame/MainFrame.css
@@ -77,6 +77,6 @@ a[href^="ftp://"] {
  * dragged element is visible (and not hidden behind a drawer or dialog)
  */
 .sortable-helper {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif; /* Font from the theme*/
+  font-family: "Comic Sans MS", "Comic Sans", cursive; /* Font from the theme*/
   z-index: 9999;
 }
