--- a/newIDE/app/src/UI/Theme/Global/Mosaic.css
+++ b/newIDE/app/src/UI/Theme/Global/Mosaic.css
@@ -15,7 +15,7 @@
 .mosaic-gd-theme .mosaic-window .mosaic-window-title {
   color: white !important;
   font-weight: 400 !important;
-  font-family: var(--gdevelop-font-family);
+  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
   font-size: 15px; /* Same as ClosableTabs font size */
 }
 
